--- a/sgc_client/package.json
+++ b/sgc_client/package.json
@@ -9,10 +9,12 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.0",
+    "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "sweetalert2": "^9.10.10"
   },
   "scripts": {
     "start": "react-scripts start",
