--- a/sgc_client/package.json
+++ b/sgc_client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "sweetalert-react": "^0.4.11",
     "sweetalert2": "^9.10.10",
     "timeago.js": "^4.0.2"
   },
