--- a/sgc_client/package.json
+++ b/sgc_client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mdbreact": "^4.25.6",
     "node-sass": "^4.13.1",
     "popper.js": "^1.16.1",
