--- a/sgc_client/package.json
+++ b/sgc_client/package.json
@@ -11,9 +11,11 @@
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "mdbreact": "^4.25.6",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
+    "react-big-calendar-like-google": "0.0.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
