--- a/sgc_client/package.json
+++ b/sgc_client/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "datatables.net": "^1.10.20",
+    "datatables.net-dt": "^1.10.20",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "mdbreact": "^4.25.6",
