--- a/sgc_client/package.json
+++ b/sgc_client/package.json
@@ -18,6 +18,7 @@
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-big-calendar-like-google": "0.0.3",
+    "react-datetime-picker": "^3.0.2",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
